# monk-manager

./: .gitignore  Cargo.toml  INITIAL_PROJECT_PROMPTS.md  README.md  SPECS.md  package-lock.json  package.json
specs/: ai-integration.md  architecture.md  cli-2.md  cli.md  configuration.md  edit-command.md  error-handling.md  explain-command.md  testing.md
src/: error.rs  main.rs  tracing.rs
src/ai/: anthropic_service.rs  error.rs  mod.rs  tests.rs
src/cli/: explain.rs  interactive.rs  mod.rs  tests.rs
src/config/: mod.rs  tests.rs
src/error/: tests.rs
