[package]
name = "monk-manager"
version = "0.1.0"
edition = "2021"
authors = ["Vasu014"]
description = "AI-powered programming assistant for code understanding and explanation"

[dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
tracing = { version = "0.1.40", default-features = false, features = ["std", "log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
dirs = "5.0"
toml = "0.8"

# Terminal and UI
termion = "2.0"

# AI and HTTP
reqwest = { version = "0.11", features = ["json"] }
anthropic = "0.0.8"

# Configuration and security
config = "0.14"
secrecy = "0.8"
keyring = "3.0"

# Testing
mockall = "0.12"
tokio-test = "0.4"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
wiremock = "0.6"

[[bench]]
name = "monk_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true 